fixed some heading layout issues

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,9 +4,8 @@ body {
 }
 
 h1 {
-    margin-left: 1rem;
-    margin-bottom: 1rem;
-    padding: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
     font-weight: 500;
 }
 
